tests/js_error/source_locations/expression/construct/construct_varargs.exp
Error: 
  ┌ source_locations/expression/construct/construct_varargs.js:2:9
  |
2 |   throw new Error();
  |         ^
Stack trace:
  at foo (source_locations/expression/construct/construct_varargs.js:2:9)
  at <global> (source_locations/expression/construct/construct_varargs.js:5:2)